--- a/ADMFacturar/Views/Articulos/CrearArticulo.cshtml
+++ b/ADMFacturar/Views/Articulos/CrearArticulo.cshtml
@@ -1,5 +1,18 @@
 ﻿@model Articulo
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ingreso de Artículo</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+</head>
+<body>
+
 <form asp-action="CrearArticulo" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
     <div class="border-b border-gray-700 pb-6">
         <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Artículo</h2>
@@ -8,25 +21,25 @@
         <div>
             <label for="PK_Articulo" class="block text-sm font-medium text-gray-300">Código Artículo</label>
             <div class="mt-2">
-                <input asp-for="PK_Articulo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <input asp-for="PK_Articulo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción</label>
             <div class="mt-2">
-                <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="Codigo_Barras" class="block text-sm font-medium text-gray-300">Código de Barras</label>
             <div class="mt-2">
-                <input asp-for="Codigo_Barras" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <input asp-for="Codigo_Barras" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
             <div class="mt-2">
-                <select asp-for="FK_Proveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <select asp-for="FK_Proveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
                     <option value="1">Proveedor 1</option>
                     <option value="2">Proveedor 2</option>
                     <option value="3">Proveedor 3</option>
@@ -39,25 +52,25 @@
         <div>
             <label for="Cantidad" class="block text-sm font-medium text-gray-300">Cantidad</label>
             <div class="mt-2">
-                <input asp-for="Cantidad" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <input asp-for="Cantidad" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="Costo" class="block text-sm font-medium text-gray-300">Costo</label>
             <div class="mt-2">
-                <input asp-for="Costo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500required">
+                <input asp-for="Costo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="Precio" class="block text-sm font-medium text-gray-300">Precio</label>
             <div class="mt-2">
-                <input asp-for="Precio" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <input asp-for="Precio" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
             </div>
         </div>
         <div>
             <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
             <div class="mt-2">
-                <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500"  >
                     <option value="true">Activo</option>
                     <option value="false">Inactivo</option>
                 </select>
@@ -67,26 +80,75 @@
     <div class="mt-6 flex justify-end gap-x-4">
         <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
         <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
         <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
     </div>
 </form>
 
-<div id="alerta-exito" class="hidden fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-green-500 text-white px-4 py-2 rounded-md mb-4">
-    ¡ Artículo Ingresado a la BD exitosamente !
-</div>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    //Alerta de ingreso de registro a la BD...
-    function mostrarAlertaYRedireccion(event) {
-        event.preventDefault();
-        document.getElementById('alerta-exito').classList.remove('hidden');
-        setTimeout(function () {
+    document.getElementById('btnGuardar').addEventListener('click', function (event) {
+        event.preventDefault(); // Detener el envío normal del formulario
 
-            window.location.href = '@Url.Action("Index", "Articulos")';
-        }, 3000);
-        setTimeout(function () {
-            document.getElementById('formcreate').submit();
-        }, 3000);
-    }
+        // Validar campos requeridos
+        var codigoArticulo = document.querySelector('[name="PK_Articulo"]').value;
+        var descripcion = document.querySelector('[name="Descripcion"]').value;
+        var codigoBarras = document.querySelector('[name="Codigo_Barras"]').value;
+        var proveedor = document.querySelector('[name="FK_Proveedor"]').value;
+        var cantidad = document.querySelector('[name="Cantidad"]').value;
+        var costo = document.querySelector('[name="Costo"]').value;
+        var precio = document.querySelector('[name="Precio"]').value;
+        var estado = document.querySelector('[name="Estado"]').value;
+
+        if (!codigoArticulo || !descripcion || !codigoBarras || !proveedor || !cantidad || !costo || !precio || !estado) {
+            // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: 'Por favor complete todos los campos requeridos.',
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'OK'
+            });
+        } else {
+            // Crear objeto FormData con los datos del formulario
+            var formData = new FormData(document.getElementById('formcreate'));
+
+            // Enviar los datos al controlador utilizando fetch
+            fetch('/Articulos/CrearArticulo', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => {
+                    if (response.ok) {
+                        // Mostrar mensaje de éxito con SweetAlert2
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Guardado Correctamente',
+                            showConfirmButton: true,
+                            confirmButtonColor: '#3085d6',
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            // Redirigir a la página de índice de artículos después de guardar
+                            window.location.href = '/Articulos/Index';
+                        });
+                    } else {
+                        throw new Error('Error al guardar los datos');
+                    }
+                })
+                .catch(error => {
+                    // Mostrar mensaje de error con SweetAlert2
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: error.message,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'OK'
+                    });
+                });
+        }
+    });
 </script>
+</body>
+</html>
