--- a/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
+++ b/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
@@ -1,5 +1,19 @@
 ﻿@model Transporte
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Modificacion de Transporte</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+</head>
+<body>
+
 <form asp-action="ActualizarTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
     <div class="border-b border-gray-700 pb-6">
         <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Transporte</h2>
@@ -25,26 +39,69 @@
         <input asp-for="PK_Medio_Transporte" value="@Model.PK_Medio_Transporte" type="hidden" />
         <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
         <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
         <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
     </div>
 </form>
 
-<div id="alerta-exito" class="hidden fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-green-500 text-white px-4 py-2 rounded-md mb-4">
-	¡ Trasnporte actualizado exitosamente !
-</div>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-	//Alerta de ingreso de registro a la BD...
-	function mostrarAlertaYRedireccion(event) {
-		event.preventDefault();
-		document.getElementById('alerta-exito').classList.remove('hidden');
-		setTimeout(function () {
+    document.getElementById('btnGuardar').addEventListener('click', function (event) {
+        event.preventDefault(); // Detener el envío normal del formulario
 
-			window.location.href = '@Url.Action("Index", "Transportes")';
-		}, 3000);
-        setTimeout(function () {
-            document.getElementById('formupdate').submit();
-        }, 3000);
-    }
+        // Validar campos requeridos
+        var descripcion = document.querySelector('[name="Descripcion"]').value;
+        var estado = document.querySelector('[name="Estado"]').value;
+
+        if (!descripcion || !estado) {
+            // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+            Swal.fire({
+                icon: 'error',
+                title: 'Error',
+                text: 'Por favor complete todos los campos requeridos.',
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'OK'
+            });
+        } else {
+            // Crear objeto FormData con los datos del formulario
+                var formData = new FormData(document.getElementById('formupdate'));
+
+            // Enviar los datos al controlador utilizando fetch
+            fetch('/Transportes/ActualizarTransporte', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => {
+                    if (response.ok) {
+                        // Mostrar mensaje de éxito con SweetAlert2
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Actualizado Correctamente',
+                            showConfirmButton: true,
+                            confirmButtonColor: '#3085d6',
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            // Redirigir a la página de índice de transportes después de guardar
+                            window.location.href = '/Transportes/Index';
+                        });
+                    } else {
+                        throw new Error('Error al guardar los datos');
+                    }
+                })
+                .catch(error => {
+                    // Mostrar mensaje de error con SweetAlert2
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: error.message,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'OK'
+                    });
+                });
+        }
+    });
 </script>
+</body>
+</html>
