--- a/ADMFacturar/Views/Vendedores/CrearVendedor.cshtml
+++ b/ADMFacturar/Views/Vendedores/CrearVendedor.cshtml
@@ -1,62 +1,121 @@
 ﻿@model Vendedor
 
-<form asp-action="CrearVendedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
-    <div class="border-b border-gray-700 pb-6">
-        <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Vendedor</h2>
-    </div>
-    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-        <div>
-            <label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre Vendedor</label>
-            <div class="mt-2">
-                <input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ingreso de Vendedor</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="~/css/custom.css" rel="stylesheet" />
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+</head>
+<body>
+
+    <form asp-action="CrearVendedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+        <div class="border-b border-gray-700 pb-6">
+            <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Vendedor</h2>
+        </div>
+        <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
+            <div>
+                <label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre Vendedor</label>
+                <div class="mt-2">
+                    <input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                </div>
+            </div>
+            <div>
+                <label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono Vendedor</label>
+                <div class="mt-2">
+                    <input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                </div>
+            </div>
+            <div>
+                <label for="Correo" class="block text-sm font-medium text-gray-300">Correo Vendedor</label>
+                <div class="mt-2">
+                    <input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                </div>
+            </div>
+            <div>
+                <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+                <div class="mt-2">
+                    <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                        <option value="true">Activo</option>
+                        <option value="false">Inactivo</option>
+                    </select>
+                </div>
             </div>
         </div>
-        <div>
-            <label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono Vendedor</label>
-            <div class="mt-2">
-                <input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
-            </div>
+        <div class="mt-6 flex justify-end gap-x-4">
+            <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+            <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+            <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+            <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
         </div>
-        <div>
-            <label for="Correo" class="block text-sm font-medium text-gray-300">Correo Vendedor</label>
-            <div class="mt-2">
-                <input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
-            </div>
-        </div>
-        <div>
-            <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
-            <div class="mt-2">
-                <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
-                    <option value="true">Activo</option>
-                    <option value="false">Inactivo</option>
-                </select>
-            </div>
-        </div>
-    </div>
-    <div class="mt-6 flex justify-end gap-x-4">
-        <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
-        <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" onclick="mostrarAlertaYRedireccion(event)" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-        <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
-    </div>
-</form>
+    </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        document.getElementById('btnGuardar').addEventListener('click', function (event) {
+            event.preventDefault(); // Detener el envío normal del formulario
+
+            // Validar campos requeridos
+            var nombre = document.querySelector('[name="Nombre"]').value;
+            var telefono = document.querySelector('[name="Telefono"]').value;
+            var correo = document.querySelector('[name="Correo"]').value;
+            var estado = document.querySelector('[name="Estado"]').value;
+
+            if (!nombre || !telefono || !correo || !estado) {
+                // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'Por favor complete todos los campos requeridos.',
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'OK'
+                });
+            } else {
+                // Crear objeto FormData con los datos del formulario
+                var formData = new FormData(document.getElementById('formcreate'));
+
+                // Enviar los datos al controlador utilizando fetch
+                fetch('/Vendedores/CrearVendedor', {
+                    method: 'POST',
+                    body: formData
+                })
+                    .then(response => {
+                        if (response.ok) {
+                            // Mostrar mensaje de éxito con SweetAlert2
+                            Swal.fire({
+                                icon: 'success',
+                                title: 'Guardado Correctamente',
+                                showConfirmButton: true,
+                                confirmButtonColor: '#3085d6',
+                                confirmButtonText: 'OK'
+                            }).then((result) => {
+                                // Redirigir a la página de índice de vendedores después de guardar
+                                window.location.href = '/Vendedores/Index';
+                            });
+                        } else {
+                            throw new Error('Error al guardar los datos');
+                        }
+                    })
+                    .catch(error => {
+                        // Mostrar mensaje de error con SweetAlert2
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: error.message,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'OK'
+                        });
+                    });
+            }
+        });
+    </script>
+</body>
+</html>
 
 
-<div id="alerta-exito" class="hidden fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-green-500 text-white px-4 py-2 rounded-md mb-4">
-    ¡ Vendedor Ingresado a la BD exitosamente !
-</div>
-
-<script>
-    
-    //Alerta de ingreso de registro a la BD...
-    function mostrarAlertaYRedireccion(event) {
-        event.preventDefault();
-        document.getElementById('alerta-exito').classList.remove('hidden');
-        setTimeout(function () {
-            window.location.href = '@Url.Action("Index", "Vendedores")';
-        }, 3000);
-        setTimeout(function () {
-            document.getElementById('formcreate').submit();
-        }, 3000);
-    }
-</script>
